tests/snapshots/rendering__consecutive_headings.snap
---
source: tests/rendering.rs
expression: "render(\"# Title\\n\\n## Section\\n\\n### Sub\")"
---
[bold][italic][double-underline]Title[/underline][/italic][/intensity]

[bold][underline]Section[/underline][/intensity]

[bold]Sub[/intensity]
