tests/snapshots/rendering__frontmatter_invalid_yaml_still_renders.snap
---
source: tests/rendering.rs
expression: "render(\"---\\ntitle: [unclosed\\n  ::: not yaml\\n---\\n\\nBody\")"
---
  ---
  [fg1]title[/color]: [[fg2]unclosed[/color]
    [fg1]::[/color]: [fg2]not yaml[/color]
  [fg2]---[/color]

Body
