tests/snapshots/rendering__frontmatter_not_at_document_start_ignored.snap
---
source: tests/rendering.rs
expression: "render(\"\\n---\\ntitle: x\\n---\\n\\nBody\")"
---
────────────────────────────────────────────────────────────────────────────────

[bold][underline]title: x[/underline][/intensity]

Body
