tests/snapshots/rendering__frontmatter_only_document.snap
---
source: tests/rendering.rs
expression: "&output"
---
  ---
  [fg1]title[/color]: [fg2]x[/color]
  ---
