tests/snapshots/rendering__frontmatter_unclosed_fence_is_not_frontmatter.snap
---
source: tests/rendering.rs
expression: "render(\"---\\ntitle: x\")"
---
────────────────────────────────────────────────────────────────────────────────

title: x
