tests/snapshots/rendering__h1_bold_italic_double_underline.snap
---
source: tests/rendering.rs
expression: "render(\"# Hello World\")"
---
[bold][italic][double-underline]Hello World[/underline][/italic][/intensity]
