tests/snapshots/rendering__h1_italic_underline.snap
---
source: tests/rendering.rs
expression: "render(\"# Hello World\")"
---
[italic][underline]Hello World[/underline][/italic]
