tests/snapshots/rendering__h1_with_inline_formatting.snap
---
source: tests/rendering.rs
expression: "render(\"# Hello **bold** World\")"
---
[italic][underline]Hello[bold] bold[/intensity] World[/underline][/italic]
