tests/snapshots/rendering__h2_bold.snap
---
source: tests/rendering.rs
expression: "render(\"## Section Title\")"
---
[bold]Section Title[/intensity]
